# gitea_api_tools

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  get_user_id.py  main.py  pyproject.toml  requirements.txt  scan_python_deps.py  utils.py
.envrc.d/: activate-poetry.bash
.hooks/: init.bash  pre-commit
.hooks/by-category/pre-commit/: _format-python-ruff.bash  check-python-unittest.bash  lint-python-ruff.py  run-python-black.bash
docs/: README.md  get_deploy_keys.md  get_outdated_python_deps.md  get_python_dep_repos.md  get_user_id.md  gitea-api.md  scan_python_deps.md
gitea_api_tools/: __init__.py  config.json.example  config.py  get_deploy_keys.py  get_outdated_python_deps.py  get_python_dep_repos.py  get_user_id.py  package.py  scan_python_deps.py  utils.py
gitea_api_tools/config/: __init__.py  configure.py  logging.py  paths.py
gitea_api_tools/gitea/: __init__.py  api.py  user.py
gitea_api_tools/gitea/repo/: __init__.py  deploy_key.py
gitea_api_tools/language/: __init__.py  python.py
gitea_api_tools/package/: __init__.py  formats.py  python.py  version.py
gitea_api_tools/utils/: __init__.py  python.py
tests/: test_utils_version.py
