[tool.poetry]
name = "gitea-api-tools"
version = "0.4.0"
description = ""
authors = ["CJ Wong <cj-wong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gitea_api_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.1"
black = "^24.2.0"
types-requests = "^2.31.0.20240218"

[tool.poetry.scripts]
gitea-api = 'gitea_api_tools:main'
get-deploy-keys = 'gitea_api_tools.get_deploy_keys:main'
get-outdated-python-deps = 'gitea_api_tools.get_outdated_python_deps:main'
get-python-deps = 'gitea_api_tools.get_python_dep_repos:main'
get-user-id = 'gitea_api_tools.get_user_id:main'

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
