[tool.poetry]
name = "gitea-api-tools"
version = "1.2.1"
description = ""
authors = ["CJ Wong <cj-wong@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gitea_api_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
types-requests = "^2.31.0.20240218"
ruff = "^0.4.3"

[tool.poetry.scripts]
gitea-api = 'gitea_api_tools:main'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
